src/styles/screen.css
.screen {
    display: flex;
    width: 100%;
    min-height: 8.8rem;
    border-radius: 0.8rem;
    background-color: var(--screen-background);
    padding: 2.4rem;
    margin-bottom: 2.4rem;
}

.screen__frame {
    width: 100%;
    height: auto;
    margin: auto 0;
    overflow: auto;
    scrollbar-width: thin;
    scrollbar-color: rgba(255, 255, 255, 0.1) transparent;
}

.screen__frame::-webkit-scrollbar {
    height: 1rem;
}
.screen__frame::-webkit-scrollbar-thumb {
    background-color: rgba(255, 255, 255, 0.1);
}
.screen__frame::-webkit-scrollbar-track {
    background-color: transparent;
}

.screen__result {
    width: 100%;
    font-size: 3.2rem;
    font-weight: 700;
    text-align: end;
    line-height: 1;
    letter-spacing: -0.05rem;
    color: var(--primary-text);
    margin: 0;
}

@media screen and (min-width: 588px) {
    .screen {
        min-height: 12.8rem;
        padding: 3.2rem;
    }

    .screen__result {
        margin-top: 1.2rem;
        font-size: 4.8rem;
        letter-spacing: -0.1rem;
    }
}

